src/objects/AFSC__FSUsageStatistic__c.object
<CustomObject>
    <description>F-Secure Cloud Protection: Storage for url and file scan statistics</description>
    <fields>
        <fullName>AFSC__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AFSC__File_Downloads__c</fullName>
        <label>File Downloads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AFSC__File_Uploads__c</fullName>
        <label>File Uploads</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AFSC__Total_Events__c</fullName>
        <label>Total Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AFSC__URL_Clicks__c</fullName>
        <label>URL Clicks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AFSC__URL_Posts__c</fullName>
        <label>URL Posts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Usage Statistic</label>
    <nameField>
        <label>Usage Statistic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Usage Statistics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>